--- a/src/MainBundle/Resources/views/Default/home.html.twig
+++ b/src/MainBundle/Resources/views/Default/home.html.twig
@@ -11,24 +11,24 @@
                     <img src="{{ asset('img/icon/logopaysage.png') }}" class="animated pulse" />
                 </div>
             </div>
-            <div class="col-md-4 hidden-sm-down"></div>
-            <div class="col-md-4 hidden-sm-down animated pulse les-3-icons">
-                <a id="iconMenu" class="animated fadeIn" href="{{ path('menu') }}">
+            <div class="col-md-6 hidden-sm-down"></div>
+            <div class="col-md- hidden-sm-down animated pulse les-3-icons">
+                <a class="animated fadeIn icon-menu" href="{{ path('menu') }}">
                     <img class="tailleIcon" src="{{ asset('img/icon/menu.png') }}">
                     <div class="txtSousMenu">
                         menu
                     </div>
                 </a>
-                <a id="iconContact" class="animated fadeIn" href="{{ path('fos_user_registration_register') }}">
+                <a class="animated fadeIn icon-contact" href="{{ path('fos_user_registration_register') }}">
                     <img class="tailleIcon" src="{{ asset('img/icon/contact.png') }}">
                     <div class="txtSousMenu">
                         contact
                     </div>
                 </a>
-                <a id="iconAccount" class="animated fadeIn" href="{{ path('fos_user_registration_register') }}">
+                <a class="animated fadeIn icon-account" href="{{ path('fos_user_registration_register') }}">
                     <img class="tailleIcon" src="{{ asset('img/icon/account.png') }}">
                     <div class="txtSousMenu">
-                        my account
+                        account
                     </div>
                 </a>
             </div>
@@ -56,9 +56,9 @@
             </div>
 
             <div id="paragraphe" class="col-md-6 col-sm-12 col-xs-12">
-                <div id="citeEtLine">
+                <div class="citeEtLine">
                     <img id="cite"  src="{{ asset('img/cite.png') }}">
-                    <img id="line1" src="{{ asset('img/icon/line.png') }}">
+                    <img class="line1" src="{{ asset('img/icon/line.png') }}">
                 </div>
                 <div  class="text">
                     <h1>Blockchain is</h1>
@@ -68,9 +68,9 @@
                         <br>the digital world has enormous value.
                     </blockquote>
                 </div>
-                <img id="line2" src="{{ asset('img/icon/line.png') }}">
+                <img class="line2" src="{{ asset('img/icon/line.png') }}">
                 <br>
-                <div id="motFin">
+                <div class="motFin">
                     M.Ravony, CEO ,Co-Founder
                 </div>
                 </div>
@@ -87,19 +87,19 @@
                                 menu
                             </div>
                         </a>
-                        <a id="iconContact" class="animated fadeIn" href="{{ path('fos_user_registration_register') }}">
+                        <a class="animated fadeIn icon-contact" href="{{ path('fos_user_registration_register') }}">
                             <img class="tailleIcon" src="{{ asset('img/icon/contact.png') }}">
                             <div class="txtSousMenu">
                                 contact
                             </div>
                         </a>
-                        <a id="iconAccount" class="animated fadeIn" href="{{ path('fos_user_registration_register') }}">
+                        <a class="animated fadeIn icon-account" href="{{ path('fos_user_registration_register') }}">
                             <img class="tailleIcon" src="{{ asset('img/icon/account.png') }}">
                             <div class="txtSousMenu">
-                                my account
+                                account
                             </div>
                         </a>
-                        <a id="IconIsole" class="animated fadeIn" href="{{ path('fos_user_registration_register') }}">
+                        <a class="animated fadeIn icon-isole" href="{{ path('fos_user_registration_register') }}">
                             <img class="tailleIcon" src="{{ asset('img/icon/slide suivant.png') }}">
                             <div class="txtSousMenu">
                                 next
@@ -125,9 +125,9 @@
     </div>
 
     <div id="paragraphe2" class="col-md-6 col-sm-12 col-xs-12 animated zoomIn ">
-    <div id="citeEtLine">
-        <img id="cite"  src="{{ asset('img/cite.png') }}">
-        <img id="line1" src="{{ asset('img/icon/line.png') }}">
+    <div class="citeEtLine2">
+        <img class="cite2"  src="{{ asset('img/cite.png') }}">
+        <img class="line1-2" src="{{ asset('img/icon/line.png') }}">
     </div>
     <div class="text">
     <h1>I'm reasonably <br>confident</h1>
@@ -136,8 +136,8 @@
     <br> exchange.
     </blockquote>
     </div>
-    <img id="line2Home2" src="{{ asset('img/icon/line.png') }}"><br>
-    <div id="motFin2">
+    <img class="line2Home2" src="{{ asset('img/icon/line.png') }}"><br>
+    <div class="motFin2">
         C.H.Ravony, Idea Architect,Co-Founder
     </div>
     </div>
