--- a/src/MainBundle/Resources/views/Default/projet.html.twig
+++ b/src/MainBundle/Resources/views/Default/projet.html.twig
@@ -10,24 +10,24 @@
                 <img src="{{ asset('img/icon/logopetit.png') }}" class="animated pulse">
             </div>
         </div>
-        <div class="col-md-4"></div>
-        <div class="col-md-4 hidden-sm-down animated pulse les-3-icons">
-                <a id="iconMenu" class="animated fadeIn" href="{{ path('menu') }}">
+        <div class="col-md-6"></div>
+        <div class="col-md-2 hidden-sm-down animated pulse les-3-icons">
+                <a class="animated fadeIn icon-menu" href="{{ path('menu') }}">
                     <img class="tailleIcon" src="{{ asset('img/icon/close.png') }}">
                     <div class="txtSousMenu">
                         back
                     </div>
                 </a>
-                <a id="iconContact" class="animated fadeIn" href="{{ path('fos_user_registration_register') }}">
+                <a class="animated fadeIn icon-contact" href="{{ path('fos_user_registration_register') }}">
                     <img class="tailleIcon" src="{{ asset('img/icon/contact.png') }}">
                     <div class="txtSousMenu" >
                         contact
                     </div>
                 </a>
-                <a id="iconAccount" class="animated fadeIn" href="{{ path('fos_user_registration_register') }}">
+                <a class="animated fadeIn icon-account" href="{{ path('fos_user_registration_register') }}">
                     <img class="tailleIcon" src="{{ asset('img/icon/account.png') }}">
-                    <div class="txtSousMenu" style="font-size:xx-small ">
-                        my account
+                    <div class="txtSousMenu" style="font-size:xx-small">
+                        account
                     </div>
                 </a>
         </div>
@@ -44,18 +44,18 @@
                     </blockquote>
                 </div>
                 <div style="margin-left: 15%">
-                    <img id="line1" src="{{ asset('img/line.png') }}"><br>
+                    <img class="line1" src="{{ asset('img/line.png') }}"><br>
                     <p>M.Ratsiraka, Developper, Co-Founder</p>
                 </div>
 <div style="text-align: left;margin-top: 15%">
-                <button id="buttonInvolved" style="margin-left: 10%">
+                <button id="buttonInvolved" >
                     < get involved !
                 </button><br><br>
     <div style="margin-left: 15%">
        name   <<input id="nom" type="text">>
         <br>
         <div id="start">
-            <<input id="start2" type="text" style="text-align: center" placeholder="start">>
+            <<input id="start2" type="text" placeholder="start">>
         </div>
 </div>
                 </div>
