--- a/src/MainBundle/Resources/views/Default/menu.html.twig
+++ b/src/MainBundle/Resources/views/Default/menu.html.twig
@@ -4,31 +4,31 @@
 
 <div class="container">
     <div class="color-orange">
-        <div class="row">
+        <div id="ligne1Menu" class="row">
             <div class="col-md-4 col-sm-12 col-xs-12">
                 <div class="animated fadeIn animated zoomInDown title2 ">
                     <img src="{{ asset('img/icon/logopetit.png') }}" class="animated pulse">
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-6">
             </div>
-            <div class="col-md-4 hidden-sm-down animated pulse les-3-icons">
-                <a id="iconMenu" class="animated fadeIn" href="{{ path('home') }}">
+            <div class="col-md-2 hidden-sm-down animated pulse les-3-icons">
+                <a class="animated fadeIn icon-menu" href="{{ path('home') }}">
                     <img class="tailleIcon" src="{{ asset('img/icon/close.png') }}">
                     <div  class="txtSousMenu">
                         close
                     </div>
                 </a>
-                <a id="iconContact" class="animated fadeIn" href="{{ path('fos_user_registration_register') }}">
+                <a class="animated fadeIn icon-contact" href="{{ path('fos_user_registration_register') }}">
                     <img class="tailleIcon" src="{{ asset('img/icon/contact.png') }}">
                     <div class="txtSousMenu" >
                         contact
                     </div>
                 </a>
-                <a id="iconAccount" class="animated fadeIn" href="{{ path('fos_user_registration_register') }}">
+                <a class="animated fadeIn icon-account" href="{{ path('fos_user_registration_register') }}">
                     <img class="tailleIcon" src="{{ asset('img/icon/account.png') }}">
                     <div class="txtSousMenu" style="font-size:xx-small ">
-                        my account
+                        account
                     </div>
                 </a>
             </div>
@@ -36,17 +36,17 @@
 
     </div>
 
-    <div id="ligne1Menu" class="row">
+    <div id="ligne2Menu" class="row">
 
     <div id="photo1" class="col-md-5 hidden-sm-down">
         <div  style="margin-left: 5%;margin-top: 15%">
         <h1>It's driving a <br>revolution</h1>
-        <img id="line1" src="{{ asset('img/line.png') }}"><br>
+        <img class="line1" src="{{ asset('img/line.png') }}"><br>
         W.TEKAM, Blockchain Engineer
     </div>
-        <div class="learn">
+        <div class="btn-organisation">
             <a class="btn btn-africaunchained" href="{{ path('projet') }}">
-                < project + >
+                < organisation + >
             </a>
         </div>
     </div>
@@ -61,10 +61,10 @@
         </blockquote>
     </div>
     <div style="margin-left: 20%">
-        <img style="margin-left: 53%" id="line1" src="{{ asset('img/line.png') }}"><br>
+        <img style="margin-left: 53%" class="line1" src="{{ asset('img/line.png') }}"><br>
        <p style="margin-left: 35%">M.Ratsiraka, Developper, Co-Founder</p>
     </div>
-    <div class="learn">
+    <div class="btn-projet">
         <a class="btn btn-africaunchained" href="{{ path('projet') }}">
             < project + >
         </a>
@@ -73,8 +73,13 @@
 </div>
 </div>
 
-    <footer id="footerMenu" class="row">
+    <footer id="ligne3Menu" class="row">
 <div id="photo3" class="col-md-7">
+    <div class="btn-publications">
+        <a class="btn btn-africaunchained" href="{{ path('projet') }}">
+            < publications + >
+        </a>
+    </div>
     <div style="margin-left: 10%;margin-top: 15%">
         <h1>Blockchain is more</h1>
         <blockquote>than just ICT innovation,but facilitates new
@@ -86,24 +91,17 @@
         <img style="margin-left: 53%" id="line1" src="{{ asset('img/line.png') }}"><br>
         <p style="margin-left: 35%">M.W.Samai, Blockchain Enginneer</p>
     </div>
-    <div class="learn">
-        <a class="btn btn-africaunchained" href="{{ path('projet') }}">
-            < project + >
-        </a>
-    </div>
 </div>
         <div id="photo4" class="col-md-5 hidden-sm-down">
-
+            <div class="btn-service">
+                <a class="btn btn-africaunchained" href="{{ path('projet') }}">
+                    < services + >
+                </a>
+            </div>
             <div style="margin-left: 5%;margin-top: 5%">
                 <h1>Free of politics<br>& human error</h1>
-                <img id="line1" src="{{ asset('img/line.png') }}"><br>
+                <img class="line1" src="{{ asset('img/line.png') }}"><br>
                 W.TEKAM, Blockchain Enginneer
-            </div>
-
-            <div class="learn">
-                <a class="btn btn-africaunchained" href="{{ path('projet') }}">
-                    < project + >
-                </a>
             </div>
 
         </div>
