--- a/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
@@ -27,7 +27,7 @@
             </a>
             <a class="animated fadeIn icon-account" href="{{ path('fos_user_registration_register') }}">
                 <img class="tailleIcon" src="{{ asset('img/icon/account.png') }}">
-                <div class="txtSousMenu" style="font-size:xx-small ">
+                <div class="txtSousMenu">
                     account
                 </div>
             </a>
