--- a/web/css/styles.scss
+++ b/web/css/styles.scss
@@ -24,17 +24,21 @@ $photo4:url(../img/pageMenu/teenagerO.jpg);
 }
 /*General*/
 html{
-  background: $color-orange;
+  background: $black;
+  height: 100%;
+  width: 100%;
 }
+
  body {
    //overflow: hidden;
    font-family: nowayregular2, serif;
-   height: 100%;
+   min-height: 100%;
    width: 100%;
    color: $color-white;
-   text-shadow: 0 0 3px #FF0000;
    margin: 0;
    padding: 0;
+   background: $color-orange;
+   font-size: large;
  }
     .img1 {
       background: $background-img1 center center;
@@ -46,13 +50,13 @@ html{
     }
    .container {
      width: 100%;
-     height: 100%;
+     min-height: 100%;
      margin: 0;
      padding: 0;
    }
     .container .row {
       width: 100%;
-      height: 100%;
+      min-height: 100%;
       margin: 0;
       padding: 0;
       .title {
@@ -62,6 +66,7 @@ html{
         }
       }
       .les-3-icons {
+        animation-delay:1.2s ;
         display: flex;
         justify-content: space-around;
         vertical-align: middle;
@@ -100,12 +105,15 @@ html{
 #ligne1{
   div[class*="col-"]{
     min-height: 6rem;
+    height: 15%;
   }
 
 }
 
 #ligne2{
-  height: 11rem;
+  min-height: 15rem;
+  height: 30%;
+  margin: 0;
   .bandeau-noir2{
     position: absolute;
     opacity: 0.5;
@@ -124,6 +132,7 @@ html{
 }
 
 .bandeau-noir {
+  margin-top: 4rem;
   position: absolute;
   opacity: 0.5;
   background: $color-black;
@@ -133,6 +142,7 @@ html{
 
 #ligne2-2{
   height: 11rem;
+  margin: 0;
   .bandeau-noir2{
     position: absolute;
     opacity: 0.5;
@@ -151,13 +161,11 @@ html{
 }
 
 #ligne3 {
-div[class*="col-"]{
   min-height: 31rem;
+  height: 55%;
 }
 
-}
-
-#button{
+#buttonNext{
   background: url('../img/icon/slide suivant.png') no-repeat;
   background-size: 40px 40px;
   cursor:pointer;
@@ -165,29 +173,37 @@ div[class*="col-"]{
   width: 40px;
   height: 40px;
   @include center-image;
+
 }
+
 
 #boutonNext {
   @include center-image;
   animation-delay: 1.2s;
 }
 
+
 /*PageMenu*/
 .btn-organisation{
+  animation-delay: 3s;
   @include right-element();
   margin-right: 6%;
 }
 
+
 .btn-projet{
+  animation-delay: 3s;
   @include left-element();
   margin-left: 12%;
 }
 
 .btn-service{
+  animation-delay: 3s;
   margin-left: 15%;
   margin-top: 3%;
 }
 .btn-publications{
+  animation-delay: 3s;
   @include right-element();
   margin-top: 2%;
   margin-right: 9%;
@@ -200,6 +216,7 @@ div[class*="col-"]{
     animation-delay: 2.3s;
     transition-delay: 2s;
     @include center-element();
+    margin-right: 0%;
   }
 
   #paragraphe2{
@@ -208,6 +225,7 @@ div[class*="col-"]{
     font-size: large;
     animation-delay: 2.3s;
     transition-delay: 2s;
+    @include center-element();
 }
   .text{
     text-align: left;
@@ -215,15 +233,17 @@ div[class*="col-"]{
   }
 
   .tailleIcon{
+
     height: 40px;
     width: 40px;
     margin-right: 20px;
+
   }
 
 .line2Home2{
   margin-left: 62%;
   width: 110px;
-  margin-top: -7%;
+  margin-top: -3%;
 }
   #cite {
     margin-right: 44%;
@@ -255,7 +275,7 @@ div[class*="col-"]{
   }
 
 .citeEtLine2 {
-  margin-right: 21%;
+  margin-right: 3%;
 }
 
   .motFin {
@@ -265,9 +285,9 @@ div[class*="col-"]{
   }
 
   .motFin2{
-    margin-left: 38%;
+    margin-left: 47%;
     color: yellow;
-    margin-top: -3%;
+    margin-top: 0%;
   }
   a {
     display: inline-block;
@@ -319,6 +339,7 @@ div[class*="col-"]{
   min-height: 22rem;
   text-align: left;
   color: beige;
+  margin: 0;
 }
 
 #photo3{
@@ -402,13 +423,119 @@ div[class*="col-"]{
   #footer{
     background: rgba(200, 37, 10, 0.83);
   }
+
+  .les-3-icons{
+    justify-content: right;
+    vertical-align: 0%;
+    display: flex;
+    justify-content: right;
+    align-items: right;
+    flex-direction: row;
+
+
+  }
+
+  .citeEtLine,.citeEtLine2{
+    margin-right: 86%;
+  }
+  .text{
+    margin-left: -35%;
+  }
+  .line2{
+    margin-left: 14%;
+  }
+  .line2Home2{
+    margin-left: 0%;
+    margin-top: 0%;
+  }
+  .motFin,.motFin2{
+    margin-left: 0%;
+  }
+  #cite,.cite2{
+    margin-right: 0%;
+  }
+  .line1-2{
+    margin-right: 1%;
+  }
+
+  .title2{
+@include center-element();
+    padding-left: 0%;
+    padding-top: 0%;
+    min-height: 5rem;
+  }
+
+
 }
 @media all and (max-width :580px){
   #footer{
     background: rgba(200, 37, 10, 0.83);
   }
-  #citeEtLine{
-    margin-left: 47%;
+  .citeEtLine,.citeEtLine2{
+    margin-right: 0%;
+  }
+ .text{
+    margin-left: 0%;
+   text-align: center;
+  }
+  .line2{
+    margin-left: 0%;
+  }
+  .line2Home2{
+    margin-left: 0%;
+    margin-top: 0%;
+  }
+.motFin,.motFin2{
+  margin-left: 0%;
+}
+  #cite,.cite2{
+    margin-right: 0%;
+  }
+.line1-2{
+  margin-right: 1%;
+}
+  .title2{
+    @include center-element();
+    padding-left: 0%;
+    padding-top: 0%;
+    min-height: 5rem;
   }
 }
 
+/* page follow*/
+
+.ligne2-follow{
+  height: 27rem;
+  font-size: x-large;
+  font-family: nowayregular2;
+}
+
+.ligne3-follow{
+  height: 25rem;
+  font-size: x-large;
+  font-family: nowayregular2, Serif;
+}
+
+.btn-link {
+  font-weight: 400 !important;
+  color: #FFFFFF !important;
+  border-radius: 0 !important;
+  font-size: x-large;
+  font-family: nowayregular2, Serif;
+
+}
+background-follow{
+  background-color: $color-orange;
+
+}
+.button {
+  font-size: small;
+  background-size: 40px 40px;
+  background: none;
+  border: none;
+  color: yellow;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  cursor: pointer;
+}
